<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_background"
    tools:context=".DashboardActivity">

    <ImageButton
        android:id="@+id/button_sign_out"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="47dp"
        android:layout_height="48dp"
        android:contentDescription="@string/btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_set_as" />

    <Button
        android:id="@+id/text_btn_logout"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/button_sign_out"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/button_facebook"
        android:layout_width="135dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_delete"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="47dp"
        android:layout_height="48dp"
        android:contentDescription="@string/btn_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <Button
        android:id="@+id/text_btn_delete"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/button_delete"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/profile_img"
        android:layout_width="154dp"
        android:layout_height="155dp"
        android:layout_marginTop="280dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:roundPercent="100"
        app:srcCompat="@mipmap/placeholder_img_round" />

    <TextView
        android:id="@+id/textView_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/display_name"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_img" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/display_email"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_username" />

</androidx.constraintlayout.widget.ConstraintLayout>